[package]
name = "simple_budgets"
version = "0.1.0"
authors = ["CoreyShupe <coreyshupe101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dirs = "1.0.5"
shellwords = "1.1.0"
prettytable-rs = "0.8.0"